--- a/pom.xml
+++ b/pom.xml
@@ -87,4 +87,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.vatbub</groupId>
+            <artifactId>common.core</artifactId>
+            <version>0.1.4-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
